--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -141,7 +141,7 @@
                   block="block" 
                   colorTheme="success" 
                   require="true" 
-				  (valueOut)="textValue($event)"></gos-radiobutton><br>
+				  (valueOut)="textValueRadio($event)"></gos-radiobutton><br>
 				  <p> <strong> Output value: </strong> {{getValue}} </p>
 				  <p> <strong> Output label: </strong> {{getLabel}} </p>
 				</div>
@@ -236,7 +236,7 @@
 		<div class="col-sm-12 col-md-6 col-lg-4">
 			<div class="card">
 				<h3 class="card-header">tooltip</h3>
-				<div class="card-block component text-xs-center"><gos-button label="move mouse to here" buttonColor="primary" tooltip="It's tooltip !!"></gos-button></div>
+				<div class="card-block component text-xs-center"><gos-button label="mouse on/tab me" buttonColor="primary" tooltip="It's tooltip !!"></gos-button></div>
 				<div class="card-block text-xs-center">
 					<gos-button routerLinkActive="active" [routerLink]="['/tooltip']" label="How to use" buttonColor="danger"></gos-button>
 				</div>
@@ -245,7 +245,7 @@
 		<div class="col-sm-12 col-md-6 col-lg-4">
 			<div class="card">
 				<h3 class="card-header">gos-tree</h3>
-				<div class="card-block component"><gos-tree [directories]="directories" id="treeview1" name="treeviewname" (valueOut)="textValue($event)"></gos-tree></div>
+				<div class="card-block component"><gos-tree [directories]="directories" id="treeview1" name="treeviewname"></gos-tree></div>
 				<div class="card-block text-xs-center">
 					<gos-button routerLinkActive="active" [routerLink]="['/tree']" label="How to use" buttonColor="danger"></gos-button>
 				</div>
