add progressbar component

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -98,11 +98,11 @@
 				</div>
 			</div>
 		</div>
-		<!--<div class="col-sm-12 col-md-6 col-lg-4">
+		<div class="col-sm-12 col-md-6 col-lg-4">
 			<div class="card">
-				<h3 class="card-header">gos-progressbar-lock</h3>
+				<h3 class="card-header">gos-progressbar</h3>
 				<div class="card-block component text-xs-center">
-					<gos-progressbar-lock id="lockId" color="firebrick" height="4px" [lockScreen]=false></gos-progressbar-lock>
+					<gos-progressbar [progress]="progress_1"></gos-progressbar>
 					<gos-button label="Start progress" buttonSize="sm" buttonColor="primary" (click)="startProgress()"></gos-button>
 					<gos-button label="Complete progress" buttonSize="sm" buttonColor="primary" (click)="completeProgress()"></gos-button>
 				</div>
@@ -110,7 +110,7 @@
 					<gos-button routerLinkActive="active" [routerLink]="['/progressbar']" label="How to use" buttonColor="danger"></gos-button>
 				</div>
 			</div>
-		</div>-->
+		</div>
 		<div class="col-sm-12 col-md-6 col-lg-4">
 			<div class="card">
 				<h3 class="card-header">gos-pulldown-menu</h3>
