--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,31 @@
+<!--<header>
+    <div class="header-bar">
+        <div class="header-bar-inner">
+            <a class="navbar-brand" href="#">
+              <img src="assets/t3_logo_light2.png" width="200" height="34" class="d-inline-block align-top" alt="Gosoft Logo">
+            </a>
+            <nav>
+                <button type="button" id="mobile_nav" title="Navigation" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                </button>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul>
+                        <li class="nav-item active" routerLinkActive="active">
+                          <a class="nav-link" [routerLink]="['/']">Home</a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                          <a class="nav-link" [routerLink]="['/gettingstart']">Getting Start</a>
+                        </li>
+                        <li class="nav-item" routerLinkActive="active">
+                          <a class="nav-link" [routerLink]="['/font']">Font</a>
+                        </li>
+                        <gos-pulldown-menu headLabel="Component" [pageList]="pageList"></gos-pulldown-menu>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+</header>-->
 <nav class="navbar navbar-light navbar-bg-gosoft">
   <a class="navbar-brand" href="#">
     <img src="assets/t3_logo_light2.png" width="200" height="34" class="d-inline-block align-top" alt="Gosoft Logo">
