--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container clearfix">
     <web-gallery-header></web-gallery-header>
     <router-outlet></router-outlet>
 </div>
