change tag name gos to go

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,6 +41,6 @@
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" [routerLink]="['/font']">Font</a>
     </li>
-    <gos-pulldown-menu headLabel="Component" [pageList]="pageList"></gos-pulldown-menu>
+    <go-pulldown-menu headLabel="Component" [pageList]="pageList"></go-pulldown-menu>
   </ul>
 </nav>
