--- a/src/app/sidebar-child/sidebar-child.html
+++ b/src/app/sidebar-child/sidebar-child.html
@@ -1,7 +1,7 @@
 <div class="card-block text-xs-center">
-	<gos-button label="Click me to show Sidebar" buttonSize="sm" buttonColor="primary" (click)="triggersidebar()"></gos-button>
+	<go-button label="Click me to show Sidebar" buttonSize="sm" buttonColor="primary" (click)="triggersidebar()"></go-button>
 </div>
-<gos-sidebar [(opened)]="open">
+<go-sidebar [(opened)]="open">
 	<nav class="nav nav-pills nav-stacked">
 		<a class="nav-link" routerLinkActive="active" [routerLink]="['/button']">Button</a>
 		<a class="nav-link" routerLinkActive="active" [routerLink]="['/checkbox']">Check Box</a>
@@ -13,4 +13,4 @@
 		<a class="nav-link" routerLinkActive="active" [routerLink]="['/radiobutton']">Radio Button</a>
 		<a class="nav-link" routerLinkActive="active" [routerLink]="['/sidebar']">Side Bar</a>
 	</nav>
-</gos-sidebar>
+</go-sidebar>
