edit datatable title name

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -398,7 +398,7 @@
 </div>
 <div class="col-sm-12 col-md-12 col-lg-12">
 	<div class="card">
-		<h3 class="card-header">datagrid</h3>
+		<h3 class="card-header">datatable</h3>
 		<div class="card-block">
 			<p-dataTable [value]="cars" expandableRows="true">
 				<p-column expander="true" styleClass="col-icon"></p-column>
@@ -439,7 +439,7 @@
 			</p-dataTable>
 		</div>
 		<div class="card-block align-center">
-			<go-button routerLinkActive="active" [routerLink]="['/datagrid']" label="How to use" buttonColor="danger"></go-button>
+			<go-button routerLinkActive="active" [routerLink]="['/datatable']" label="How to use" buttonColor="danger"></go-button>
 		</div>
 	</div>
 </div>
