change router name and edit wrong router

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -250,7 +250,7 @@
 					</p-tabView>
 				</div>
 				<div class="card-block align-center">
-					<go-button routerLinkActive="active" [routerLink]="['/tab']" label="How to use" buttonColor="danger"></go-button>
+					<go-button routerLinkActive="active" [routerLink]="['/tabview']" label="How to use" buttonColor="danger"></go-button>
 				</div>
 			</div>
 		</div>
@@ -343,7 +343,7 @@
 			<p-steps [model]="stepItems" styleClass="steps-custom"></p-steps>
 		</div>
 		<div class="card-block align-center">
-			<go-button routerLinkActive="active" [routerLink]="['/sidebar']" label="How to use" buttonColor="danger"></go-button>
+			<go-button routerLinkActive="active" [routerLink]="['/steps']" label="How to use" buttonColor="danger"></go-button>
 		</div>
 	</div>
 </div>
