add style for a class btn

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@ pre {background-color: rgb(247,247,249)!important;}
 .jumbotron {background-color: #ffffff!important; padding: 2rem 2rem 0 2rem!important;}
 a { color: #990000!important;}
 a:focus, a:hover { color: #cc0000!important;}
+a.btn, a.btn:focus, a.btn:hover { color: #ffffff!important;}
 nav ul li.nav-item.active a.nav-link { font-weight: bold;}
 nav small.project-name, a.nav-link, a.dropdown-item { color: #990000!important;}
 a.nav-link:focus, a.nav-link:hover { color: #cc0000!important;}
