add badge in getting start menu for new user

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,7 @@
       <a class="nav-link" [routerLink]="['/']">Home</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/gettingstart']">Getting Start</a>
+      <a class="nav-link" [routerLink]="['/gettingstart']">Getting Start <go-badge type="badge" badgeData="New User!" badgeColor="success"></go-badge></a>
     </li>
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" [routerLink]="['/font']">Font</a>
