--- a/src/app/doc/tree.document.html
+++ b/src/app/doc/tree.document.html
@@ -27,6 +27,14 @@
 				</div>
 			</div>
 		</div>
+		<div class="jumbotron">
+			<div class="card-title">
+				<h2> Release Update </h2>
+			</div>
+			<div class="card-block">
+				<li *ngFor="let line of releaseUpdate"> {{line}} </li>	
+			</div>
+		</div>
 	</div>
   	<div role="tabpanel" class="tab-pane fade" id="Document">
 		<div class="jumbotron">
