--- a/src/app/doc/tree.document.html
+++ b/src/app/doc/tree.document.html
@@ -32,7 +32,7 @@
 				<h2> Release Update </h2>
 			</div>
 			<div class="card-block">
-				<li *ngFor="let line of releaseUpdate"> {{line}} </li>	
+				<li *ngFor="let line of releaseUpdate"> <b> {{line.head}}</b>: {{line.data}} </li>		
 			</div>
 		</div>
 	</div>
