edit image path

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -379,7 +379,7 @@
 				<ng-template let-car pTemplate="item">
 					<div style="padding:3px" class="ui-g-12 ui-md-3">
 						<p-panel [header]="car.vin" [style]="{'text-align':'center'}">
-							<img src="/app/content/assets/images/datagrid/{{car.brand}}.gif">
+							<img src="./app/content/assets/images/datagrid/{{car.brand}}.gif">
 							<div class="car-detail">{{car.year}} - {{car.color}}</div>
 							<hr class="ui-widget-content" style="border-top:0">
 							<i class="fa fa-search" (click)="selectCar(car)" style="cursor:pointer"></i>
@@ -391,7 +391,7 @@
 			<p-dialog header="Car Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" width="225" (onAfterHide)="onDialogHide()">
 				<div class="ui-grid ui-grid-responsive ui-grid-pad" *ngIf="selectedCar" style="font-size:16px;text-align:center;padding:20px">
 					<div class="ui-grid-row">
-						<div class="ui-grid-col-12" style="text-align:center"><img src="/app/content/assets/images/datagrid/{{selectedCar.brand}}-big.gif"></div>
+						<div class="ui-grid-col-12" style="text-align:center"><img src="./app/content/assets/images/datagrid/{{selectedCar.brand}}-big.gif"></div>
 					</div>
 					<div class="ui-grid-row">
 						<div class="ui-grid-col-4">Vin: </div>
@@ -432,7 +432,7 @@
 						<div class="ui-grid-row">
 							<div class="ui-grid-col-3" style="text-align:center">
 								<i class="fa fa-search" (click)="showCar(car)" style="cursor:pointer;float:left;margin-top:40px"></i>
-								<img src="/app/content/assets/images/datagrid/{{car.brand}}-big.gif">
+								<img src="./app/content/assets/images/datagrid/{{car.brand}}-big.gif">
 							</div>
 							<div class="ui-grid-col-9">
 								<div class="ui-grid ui-grid-responsive ui-grid-pad">
