--- a/src/app/doc/textbox.document.html
+++ b/src/app/doc/textbox.document.html
@@ -78,6 +78,13 @@
 			<h2>Number Format</h2>
 			<p>เลือกใช้ format ได้จาก <strong><em><a href="http://numeraljs.com/" target="_blank">Numeral.js</a></em></strong> (อ้างอิงเวอร์ชั่น <strong>{{numeralJSVersion}})</strong></p>
 		</div>
+		<div class="jumbotron">
+			<h2>Getting Started</h2>
+			<p><li>systemjs.config.js</li></p>
+			<pre><code *ngFor="let line of systemjsLine">{{line}}<br></code></pre><br>
+			<p><li>app.module.ts</li></p>
+			<pre><code *ngFor="let line of appModuleLine">{{line}}<br></code></pre>
+		</div>
 	</div>
 	<div role="tabpanel" class="tab-pane fade" id="Example">
 		<!--<div class="container-fluid">-->
