--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,21 +26,44 @@
         </div>
     </div>
 </header>-->
-<nav class="navbar navbar-light navbar-bg-gosoft">
+<nav class="navbar navbar-toggleable-md navbar-light navbar-bg-gosoft">
+  <button id="navbarToggler" class="navbar-toggler navbar-toggler-right"
+				type="button" data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+	</button>
   <a class="navbar-brand" href="#">
     <img src="assets/t3_logo_light2.png" width="200" height="34" class="d-inline-block align-top" alt="Gosoft Logo">
-    <small class="project-name"><strong>Front-end Web Application Framework</strong></small>
+    <small id="projectName" class="project-name"><strong>Front-end Web Application Framework</strong></small>
   </a>
-  <ul class="nav navbar-nav float-md-right">
-    <li class="nav-item active" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/']">Home</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/gettingstart']">Getting Start</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/font']">Font</a>
-    </li>
-    <go-pulldown-menu headLabel="Component" [pageList]="pageList"></go-pulldown-menu>
-  </ul>
+  <div class="navbar-collapse collapse float-md-right"
+				id="navbarSupportedContent">
+      <ul class="nav navbar-nav">
+        <li class="nav-item active" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/']">Home</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/gettingstart']">Getting Start</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/font']">Font</a>
+        </li>
+        <go-pulldown-menu headLabel="Component" [pageList]="pageList"></go-pulldown-menu>
+        <!--<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#"
+						id="supportedContentDropdown" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">Dropdown</a>
+						<div class="dropdown-menu"
+							aria-labelledby="supportedContentDropdown">
+							<a class="dropdown-item" href="#">Menu 1</a> <a
+								class="dropdown-item" href="#">Menu 2</a> <a
+								class="dropdown-item" href="#">Menu 3</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Seaprated Menu</a>
+						</div>
+					</li>-->
+      </ul>
+  </div>
 </nav>
