--- a/src/app/doc/checkbox.document.html
+++ b/src/app/doc/checkbox.document.html
@@ -34,9 +34,12 @@
 					<h2> Release Update </h2>
 				</div>
 				<div class="card-block">
-					<li *ngFor="let line of releaseUpdate"> <b> {{line.head}}</b>: {{line.data}} </li>		
-					<h5 *ngIf= "fixBug"> <b> Bug Fixes</b> {{fixBug[0].version}} </h5> 
-					<label *ngFor="let line of fixBug"> <li *ngIf="line.data != null"> <b> {{line.head}}: </b>{{line.data}} </li> </label>
+					<p *ngFor="let line of releaseUpdate">
+						<b *ngIf="line.dateUpdate"> {{line.dateUpdate}} </b>
+						<li *ngIf="line.head"> 
+							<b> {{line.head}}</b>: {{line.data}} 
+						</li>
+					</p>
 				</div>
 			</div>
 	</div>
@@ -68,37 +71,7 @@
                         <td>{{attribute.description}}</td>
                     </tr>
                 </tbody>
-                <tbody>
-                    <tr>
-                        <th scope="row">*</th>
-                        <td>data</td>
-                        <td><em>array of data</em></td>
-                        <td>ใช้สำหรับใส่ข้อมูล</td>
-                    </tr>
-                </tbody>
-
             </table>
-
-			<h2>Event</h2>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Attribute</th>
-                        <th>Type</th>
-                        <th>Description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let event of eventList">
-                        <th scope="row">{{event.require}}</th>
-                        <td>{{event.name}}</td>
-                        <td><em>{{event.type}}</em></td>
-                        <td>{{event.description}}</td>
-                    </tr>
-                </tbody>
-            </table>
-
         </div>
         <div id="arrOfData" class="jumbotron">
             <h2>Attributes Array of data </h2>
@@ -127,9 +100,16 @@
 			<div class="row row-in-tab">
 				<div class="col-md-6">
 					<h4> Block</h4>
-					<go-checkbox name="chbnames1" id="chbid1" label="Checkbox: " [data]="datas1" type="block" (valueOut)="textValue($event)"  colorTheme="success" require="true">  check </go-checkbox>
-					<p> <strong> Output value: </strong> {{getValue}} </p>
-					<p> <strong> Output label: </strong> {{getLabel}} </p>
+					<go-checkbox 
+							name="chbnames1" 
+							id="chbid1" 
+							label="Checkbox: "  
+							[(ngModel)]="datas1" 
+							type="block" 
+							colorTheme="success" 
+							require="true">  check </go-checkbox>
+					<p> <strong> Output value: </strong> {{getValue}}  <label *ngFor="let d of datas1"> {{d.value}} , </label></p>
+					<p> <strong> Output label: </strong> {{getLabel}}  <label *ngFor="let d of datas1"> {{d.label}} , </label> </p>
 				</div>
 				<div class="col-md-6">
 					<div role="tab" id="ex_1">
@@ -149,7 +129,13 @@
 			<div class="row row-in-tab">
 				<div class="col-md-6">
 					<h4> Inline </h4>
-					<go-checkbox name="chbname2" id="chbid2" label="Checkbox: " [data]="datas2" colorTheme="warning">  check </go-checkbox>
+					<go-checkbox name="chbname2" 
+								id="chbid2" 
+								[(ngModel)]="datas2"  
+								colorTheme="warning"
+								>  check </go-checkbox>
+					<p> <strong> Output value: </strong> {{getValue}}  <label *ngFor="let d of datas2"> {{d.value}} , </label> </p>
+					<p> <strong> Output label: </strong> {{getLabel}}  <label *ngFor="let d of datas2"> {{d.label}} , </label> </p>
 				</div>
 				<div class="col-md-6">
 					<div role="tab" id="ex_2">
@@ -169,9 +155,17 @@
             <div class="row row-in-tab">
 				<div class="col-md-6">
 					<h4> Columns </h4>
-                    <go-checkbox name="chbnames3" id="chbid3" label="Select Checkbox: " (valueOut)="textValueColumns($event)" [data]="datas3" type="column" [col]="3" colorTheme="danger" require="true">  check </go-checkbox>
-					<p> <strong> Output value: </strong> {{getValueCol}} </p>
-					<p> <strong> Output label: </strong> {{getLabelCol}} </p>
+                    <go-checkbox name="chbnames3" 
+								id="chbid3" 
+								label="Select Checkbox: " 
+								[(ngModel)]="datas3"  
+								type="column" 
+								[col]="3" 
+								colorTheme="danger" 
+								require="true"
+					>  check </go-checkbox>
+					<p> <strong> Output value: </strong> {{getValue}} <label *ngFor="let d of datas3"> {{d.value}} , </label></p>
+					<p> <strong> Output label: </strong> {{getLabel}} <label *ngFor="let d of datas3"> {{d.label}} , </label></p>
 				</div>
 				<div class="col-md-6">
 					<div role="tab" id="ex_3">
