--- a/src/app/doc/textbox.document.html
+++ b/src/app/doc/textbox.document.html
@@ -43,7 +43,9 @@
 				<h3>Release Update</h3>
 			</div>
 			<div class="card-block">
-				<h5><strong>Version </strong>2.0 ({{releaseDate}})</h5>
+				<h5><strong>Bug Fixes </strong>2.0.1 ({{releaseDate}})</h5>
+				<li *ngFor="let line of releaseUpdate_v_2_0_1">{{line.data}} </li>
+				<h5><strong>Version </strong>2.0 (3 May 2017)</h5>
 				<li *ngFor="let line of releaseUpdate_v_2">{{line.data}} </li>	
 			</div>
 		</div>
@@ -146,7 +148,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<label><strong>Number box</strong></label>
-					<go-textbox type="number" [(ngModel)]="number_box" goId="number_box" maxlength="6" placeholder="0-9"></go-textbox>
+					<go-textbox type="number" [(ngModel)]="number_box" goId="number_box" placeholder="0-9"></go-textbox>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_3">
@@ -158,7 +160,7 @@
 					</div>
 					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
 						<div class="jumbotron">
-							<code>&lt;go-textbox type="number" [(ngModel)]="number_box" goId="number_box" maxlength="6" placeholder="0-9"&gt;&lt;/go-textbox&gt;</code>
+							<code>&lt;go-textbox type="number" [(ngModel)]="number_box" goId="number_box" placeholder="0-9"&gt;&lt;/go-textbox&gt;</code>
 							<p></p>
 							<p></p>
 							<p>component.ts</p>
@@ -170,7 +172,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<label><strong>Currency box with tooptip positioning</strong></label>
-					<go-textbox type="currency" [(ngModel)]="currency_box" goId="currency_box" warningPos="bottom" warningText="กรุณาระบุรูปแบบตัวเลขให้ถูกต้อง"></go-textbox>
+					<go-textbox type="currency" [(ngModel)]="currency_box" goId="currency_box"></go-textbox>
 					<small>*ทดสอบโดยการระบุตัวอักษรลงไปและเอาเม้าส์ชี้*</small>
 				</div>
 				<div class="col-md-9">
