--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -203,7 +203,7 @@
 					</ul>
 				</div>
 				<div class="card-block align-center">
-					<go-button routerLinkActive="active" [routerLink]="['/pulldown']" label="How to use" buttonColor="danger"></go-button>
+					<go-button routerLinkActive="active" [routerLink]="['/pulldownmenu']" label="How to use" buttonColor="danger"></go-button>
 				</div>
 			</div>
 		</div>
